--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to blog site</title>
-<meta http-equiv="refresh" content="0; URL=https://my-blog-three-ashy.vercel.app/">
-<link rel="canonical" href="https://my-blog-three-ashy.vercel.app/"
+<meta http-equiv="refresh" content="0; URL=https://mtiennnnn.vercel.app/">
+<link rel="canonical" href="https://mtiennnnn.vercel.app/"
